tests/unit/language/overloads/no_match_errors.arche
// RUN: ! %arche build -o %t %s 2>%t.err
// RUN: grep -qiF "no member of group" %t.err
pick_int :: func(x: int) -> int {
  return x;
}
pick_float :: func(x: float) -> float {
  return x;
}
pick :: func { pick_int, pick_float }

main :: proc() {
  c := 'X';
  r := pick(c);
  // error: no member of group 'pick' matches char arg
}
